syntax = "proto3";
package tabilabs.tabiv2.evm;

option go_package = "github.com/tabilabs/tabi-v2/x/evm/types";

enum PointerType {
    ERC20 = 0;
    ERC721 = 1;
    NATIVE = 2;
    CW20 = 3;
    CW721 = 4;
    ERC1155 = 5;
    CW1155 = 6;
  }
